# DSM

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
develop/integration/rdk-b-22q3/meta-cmf-raspberrypi/recipes-kernel/linux/: linux-raspberrypi_5.4.bbappend
develop/integration/rdk-b-22q3/meta-cmf-raspberrypi/recipes-kernel/linux/files/: container.cfg
develop/integration/rdk-b-22q3/meta-rdk/recipes-containers/dsm/: dsm.bb
develop/integration/rdk-b-22q3/meta-rdk/recipes-containers/dsm/files/: dsm.config
develop/integration/rdk-b-22q3/meta-rdk/recipes-containers/librbusprovider/: librbusprovider.bb
develop/integration/rdk-b-22q3/meta-rdk/recipes-containers/librbusprovider/files/: 0001-static-cast.patch
develop/integration/rdk-b-22q3/patches/: dac_distro_feature_kernel.patch
develop/librbusprovider/: CMakeLists.txt  utility.cpp
develop/vagrant/: README.md  Vagrantfile  dsm.config
develop/vagrant/extra_files/: dsm.service
develop/vagrant/patches/: lcm_rbus.patch
develop/vagrant/patches/obuspa/: vendor.am.patch  vendor.c.patch
integration/rdk-b-22q1/dsm/rpi/: README.md
integration/rdk-b-22q1/dsm/rpi/new/meta-raspberrypi/recipes-kernel/linux/files/: container.cfg
integration/rdk-b-22q1/dsm/rpi/new/meta-rdk/recipes-containers/dsm/: dsm.bb
integration/rdk-b-22q1/dsm/rpi/patches/meta-cmf-raspberrypi/conf/machine/: raspberrypi-rdk-broadband.conf.patch
integration/rdk-b-22q1/dsm/rpi/patches/meta-raspberrypi/recipes-kernel/linux/: linux-raspberrypi.inc.patch  linux-raspberrypi_5.4.bb.patch
integration/rdk-b-22q1/dsm/rpi/patches/meta-rdk-broadband/recipes-core/packagegroups/: packagegroup-rdk-oss-broadband.bbappend.patch
integration/rdk-b-22q1/dsm/rpi/patches/meta-rdk/recipes-containers/dobby/: dobby.bb.patch
integration/rdk-b-22q1/dsm/rpi/scripts/: apply_patches_overlays.sh
integration/rdk-b-22q1/dsm/turris/: README.md
integration/rdk-b-22q1/dsm/turris/new/meta-rdk/recipes-containers/dsm/: dsm.bb
integration/rdk-b-22q1/dsm/turris/new/meta-turris/recipes-kernel/linux/linux-yocto-5.15/: container.cfg
integration/rdk-b-22q1/dsm/turris/patches/meta-turris/conf/distro/include/: rdk-turris.inc.patch
integration/rdk-b-22q1/dsm/turris/patches/meta-turris/recipes-kernel/linux/: linux-yocto_5.15.44.bb.patch
integration/rdk-b-22q1/dsm/turris/scripts/: apply_patches_overlays.sh
integration/rdk-b-22q1/usp/rpi/: README.md
integration/rdk-b-22q1/usp/rpi/patches/meta-rdk-broadband/recipes-rdkb/usp-pa/: usp-pa.bb.patch
integration/rdk-b-22q1/usp/rpi/scripts/: apply_patches_overlays.sh
integration/rdk-b-22q3/meta-rdk/recipes-containers/dobby/: dobby.bb
integration/rdk-b-22q3/meta-rdk/recipes-containers/dsm/: dsm.bb
integration/rdk-b-22q3/meta-rdk/recipes-containers/dsm/files/: 0001-static-cast.patch
integration/rdk-b-22q3/patches/: packagegroup_dac.patch
src/: CMakeLists.txt  dsm-cli.cpp  dsm-controller.cpp  dsm-controller.hpp  dsm.config  main.cpp
src/datamodel/: deployment-unit.cpp  deployment-unit.hpp  execution-environment.cpp  execution-environment.hpp  execution-unit.cpp  execution-unit.hpp
src/datamodel/adapters/: container-runtime-adapter.cpp  container-runtime-adapter.hpp  packager-adapter.cpp  packager-adapter.hpp
src/datamodel/bridge/: container-runtime.cpp  container-runtime.hpp  packager.cpp  packager.hpp
src/librbusprovider/: CMakeLists.txt  provider.cpp  provider.h  rbus_macros.h  table.cpp  table.h  utility.h
src/rbus/: dsm_rbus_provider.cpp  dsm_rbus_provider.hpp
src/utils/: command-context.cpp  command-context.hpp  execute-command.cpp  execute-command.hpp  file-system.cpp  file-system.hpp  socket-server-test.cpp  socket-server.cpp  socket-server.hpp  thread_worker.cpp  thread_worker.hpp  uuid_generator.cpp  uuid_generator.hpp
